# System-Design

./: .gitignore  LLD_Problem_List.csv  agentic_ai_architect_roadmap_interview_handbook.md  card_processing_ecosystem.md  card_processing_ecosystemv2.md  upi_acquiring_issuing_switch_flow.md
1-Path-For-Architect/: 01-execution-plan-and-skill-matrix.md  02-system-design-hld.md  03-low-level-design-solid-oop.md  04-dsa-algorithms-production-patterns.md  05-java-jvm-primary-backend-stack.md  06-database-design-internals.md  07-database-technologies-selection.md  (+41 more)
3-Archieve/AI-ML/system-design-agent/: .env  .env.example  pyproject.toml
3-Archieve/AI-ML/system-design-agent/.github/copilot/: README.md
3-Archieve/AI-ML/system-design-agent/output/order-tracking/: DB_DESIGN.md  REVIEW_REPORT.md
3-Archieve/AI-ML/system-design-agent/output/order-tracking/LLD/: Customer App.md  Delivery Partner App.md
3-Archieve/AI-ML/system-design-agent/src/: main.py
3-Archieve/AI-ML/system-design-agent/src/agents/: base_agent.py  deployment_agent.py  hld_generator.py  lld_generator.py  pr_review_agent.py  review_agent.py  security_review_agent.py
3-Archieve/AI-ML/system-design-agent/src/ingestion/: chunker.py  confluence_reader.py
3-Archieve/AI-ML/system-design-agent/src/mcp_server/: server.py
3-Archieve/AI-ML/system-design-agent/src/orchestration/: extended_graph.py  graph.py  state.py
3-Archieve/AI-ML/system-design-agent/src/retrieval/: vector_store.py
3-Archieve/AI-ML/system-design-agent/src/system_design_agent.egg-info/: SOURCES.txt  entry_points.txt
AI-ML-DL/: .gitignore  (+5 more)
(+6321 files in other folders)
