[project]
name = "system-design-agent"
version = "0.1.0"
description = "Autonomous agent that generates System Design (HLD, LLD, DB Design) from PRD documents"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # LLM & Agent Framework
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.2.0",
    
    # Embeddings & Vector Store
    "chromadb>=0.4.0",
    "openai>=1.10.0",
    
    # Confluence Integration
    "httpx>=0.27.0",
    
    # Utilities
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
]

pinecone = [
    "pinecone-client>=3.0",
]

cohere = [
    "cohere>=5.0",  # For reranking
]

[project.scripts]
design-agent = "src.main:main"
design-mcp = "src.mcp_server.server:run_mcp_server"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
